Add service availability
