# apps/server/src/operations/availability/index.ts
@@ -1,5 +1,9 @@
 import query from "./query";
+import slots from "./slots";
+import windows from "./windows";
 
 export const availability = {
   query,
+  slots,
+  windows,
 };
